--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-username = ""
-password = ""
-telgramtoken = ""
-chatid = ''
+username = "2007421030"
+password = "Y5hZ6sJ6"
+telgramtoken = "5046088120:AAGYVsLwLNHu4hLgS4jlySRtegSF70quH1Y"
+chatid = '@FIRMAN_KURNIAWAN'
 totalcourse = 8
-moodleSemId = "28" #http://moodle.mec.ac.in/course/index.php?categoryid=4
-startTime = "02:01"#IST
-endTime ="10:00" #IST
+moodleSemId = "525" #http://moodle.mec.ac.in/course/index.php?categoryid=4
+startTime = "01:00"#IST
+endTime ="02:00" #IST
